Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/6302956/T6302956.out
T6302956.java:12:57: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.util.Properties, java.util.Map<java.lang.String,java.lang.String>)
1 error
